qbs (1.4.2+dfsg-3) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 03 Sep 2015 20:17:18 +0300

qbs (1.4.2+dfsg-2) unstable; urgency=medium

  * Backport upstream change that should hopefully fix tests failures
    on most architectures (dont_throw_exceptions.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 26 Aug 2015 16:57:58 +0300

qbs (1.4.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Drop patches:
    - fix_assembly_test.diff (applied upstream)
    - revert_tests_speedup.diff (applied upstream)
    - skip_test.diff (no longer needed)
  * Refresh and rebase other patches.
  * Update qbs.install to install some new files.
  * Remove gitignore files in clean target.
  * Minor debian/copyright updates.
  * Update libqbscore1.symbols (only internal symbols changed).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 24 Aug 2015 18:49:24 +0300

qbs (1.4.1+dfsg-8) unstable; urgency=medium

  * Tell qmake where to install libraries and plugins, rather than moving
    them after installing (LP: #1456593).
  * Remove lib/ directory in clean target.
  * Update symbols files for GCC 5, fixing a build failure.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 12 Aug 2015 20:55:48 +0300

qbs (1.4.1+dfsg-7) unstable; urgency=medium

  * Skip homeDirectory test because buildds do not have home directory
    (skip_test_homedirectory.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 18 Jul 2015 21:18:43 +0300

qbs (1.4.1+dfsg-6) unstable; urgency=medium

  * Simplify testing commands: no need to pass --settings-dir because
    we export XDG_CONFIG_HOME anyway.
  * Define qbs_enable_unit_tests to enable some additional tests.
    - Add some new symbols that appeared after enabling it.
  * Move tests whitelist logic to auto.pro, so that non-API tests are
    still run on non-whitelisted architectures.
  * Talk to FreeBSD kernel manually instead of using kinfo_getproc,